# CMake-VSCode-SDL-Example

./: .gitignore  CMakeLists.txt  CMakeLists.txt.example  LICENSE.md  Readme.md
.github/workflows/: cmake.yml
.github/workflows/utils/: workflow-CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/headers/: example.hpp
src/lib/: example.cpp
tests/: CMakeLists.txt  CMakeLists.txt.in  test.cpp
utils/: sdl2_image-config.cmake.example
workflows/: cmake.yml
workflows/utils/: workflow-CMakeLists.txt
